--- a/styles/light.css
+++ b/styles/light.css
@@ -1,5 +1,5 @@
 :root.theme-light {
-  --bg-color: #fff1f7;
+  --bg-color: #FFF1F7;
   --bg-image: url("../images/cover-image-light.png");
   --text-color: #353430;
   --accent-color: #ff8dcb;
