--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,9 @@
   padding: 2px 0;
   line-height: 1.3;
   font-weight: 700;
+  min-height: 23px;
+  display: flex;
+  align-items: center;
 }
 
 .card__title--regular {
@@ -48,6 +51,9 @@
 .title-decor {
   background-color: var(--accent-color);
   color: var(--text-accent-color);
+  min-height: 23px;
+  display: flex;
+  align-items: center;
 }
 
 .header {
@@ -199,6 +205,13 @@
   font-size: 18px;
   margin: 0;
   line-height: 1.3;
+  font-weight: 700;
+  min-height: 23px;
+  display: flex;
+  align-items: center;
+}
+
+.text-card__title--regular {
   font-weight: 400;
 }
 
@@ -219,6 +232,9 @@
   margin: 0;
   padding: 4px 10px;
   text-align: start;
+  min-height: 23px;
+  display: flex;
+  align-items: center;
 }
 
 .card--advice .card__paragraph {
@@ -237,6 +253,9 @@
   margin-bottom: 20px;
   font-weight: 700;
   line-height: 1.3;
+  min-height: 23px;
+  display: flex;
+  align-items: center;
 }
 
 .gallery__grid {
@@ -297,8 +316,8 @@
   right: 0;
   width: 25px;
   height: 25px;
-  border-top: 1px solid #353430;
-  border-right: 1px solid #353430;
+  border-top: 1px solid var(--decor-color);
+  border-right: 1px solid var(--decor-color);
 }
 
 .decorated-zone::after {
@@ -308,8 +327,8 @@
   left: 0;
   width: 25px;
   height: 25px;
-  border-bottom: 1px solid #353430;
-  border-left: 1px solid #353430;
+  border-bottom: 1px solid var(--decor-color);
+  border-left: 1px solid var(--decor-color);
 }
 
 @media (max-width: 767px) {
@@ -372,10 +391,16 @@
     margin-top: 16px;
     margin-bottom: 20px;
     padding: 0;
+    min-height: 23px;
+    display: flex;
+    align-items: center;
   }
 
   .card--advice .card__title {
     padding: 0;
+    min-height: 23px;
+    display: flex;
+    align-items: center;
   }
 
   .content-section--tips .card--advice {
@@ -389,10 +414,6 @@
 
   .tips-header__main {
     margin-bottom: 4px;
-  }
-
-  .title-decor {
-    height: 23px;
   }
 
   .card {
@@ -413,6 +434,9 @@
 
   .gallery__title {
     margin-bottom: 11px;
+    min-height: 23px;
+    display: flex;
+    align-items: center;
   }
 
   .gallery__grid {
@@ -512,8 +536,10 @@
   }
 
   .why-title {
-    height: 23px;
     margin-top: 4px;
+    min-height: 23px;
+    display: flex;
+    align-items: center;
   }
   
   .content-section__body--card-column {
@@ -525,16 +551,24 @@
     padding: 0 0 0 0;
     margin-bottom: 20px;
     width: 472px;
+    min-height: 23px;
+    display: flex;
+    align-items: center;
   }
 
   .title-decor {
     width: 472px;
+    min-height: 23px;
+    display: flex;
+    align-items: center;
   }
 
   .factor-title {
     width: 728px;
     margin-top: 4px;
-    height: 23px;
+    min-height: 23px;
+    display: flex;
+    align-items: center;
   }
 
   .card__paragraph {
@@ -551,6 +585,9 @@
 
   .card--advice .card__title {
     padding: 0;
+    min-height: 23px;
+    display: flex;
+    align-items: center;
   }
 
   .card--advice .card__paragraph {
@@ -588,6 +625,9 @@
 
    .gallery-title-custom {
     width: 98%;
+    min-height: 23px;
+    display: flex;
+    align-items: center;
   }
 
   .gallery__image:nth-child(1) {
@@ -704,9 +744,11 @@
     margin-left: 0;
   }
 
-  .title-decor { 
+  .title-decor {
     width: 649px;
-    height: 23px;
+    min-height: 23px;
+    display: flex;
+    align-items: center;
   }
   
   .content-section__body {
@@ -716,7 +758,7 @@
   }
 
   .text-card__paragraph {
-    margin-top: 11px;
+    margin-top: 10px;
     width: 673px;
     margin-bottom: 23px;
   }
@@ -744,7 +786,7 @@
   }
 
   .content-section--tips {
-    margin-bottom: 71px;
+    margin-bottom: 76px;
     display: grid;
     gap: 0;
     margin-left: 0;
@@ -753,6 +795,9 @@
 
   .factor-title {
     width: 314px;
+    min-height: 23px;
+    display: flex;
+    align-items: center;
   }
 
   .factor-text {
@@ -779,6 +824,9 @@
     padding: 0;
     margin-bottom: 20px;
     width: 653px;
+    min-height: 23px;
+    display: flex;
+    align-items: center;
   }
   
   .content-section--tips .content-section__body--tips {
@@ -800,6 +848,9 @@
   .content-section--tips .card--advice .card__title {
     margin: 0 0 4px 0;
     padding: 2px 0;
+    min-height: 23px;
+    display: flex;
+    align-items: center;
   }
   
   .content-section--tips .card--advice .card__paragraph {
@@ -815,6 +866,9 @@
 
   .gallery-title-custom {
     width: 98%;
+    min-height: 23px;
+    display: flex;
+    align-items: center;
   }
 
   .gallery__grid {
@@ -846,7 +900,7 @@
   .gallery__image:nth-child(4) {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
-    height: 315px;
+    height: 230px;
   }
   
   .gallery__image:nth-child(5) {
