--- a/styles/style.css
+++ b/styles/style.css
@@ -6,81 +6,58 @@
   background-attachment: fixed;
   color: var(--text-color);
   font-family: 'IBM Plex Mono', 'Courier New', Courier, monospace;
-  font-size: 18px;
-}
-
-.page__container {
-  max-width: 1024px;
-  margin: 0 auto;
-  padding: 0 10px;
-}
-
-.card {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.card__title {
-  font-size: 18px;
-  background-color: var(--accent-color);
-  color: var(--text-accent-color);
-  padding: 2px 0;
-  line-height: 1.3;
-  font-weight: 700;
-  min-height: 23px;
-  display: flex;
-  align-items: center;
-}
-
-.card__title--regular {
-  font-weight: 400;
-}
-
-.card__content {
-  padding-top: 10px;
-}
-
-.card__paragraph {
-  color: var(--text-color);
-  line-height: 1.3;
-  margin: 0;
-  font-size: 18px;
-}
-
-.title-decor {
-  background-color: var(--accent-color);
-  color: var(--text-accent-color);
-  min-height: 23px;
-  display: flex;
-  align-items: center;
+  font-size: 16px;
 }
 
 .header {
   position: relative;
   display: grid;
-  grid-template-rows: 1fr auto 1fr;
+  grid-template-rows: 1fr min-content 1fr;
   align-items: center;
+  justify-items: end;
   min-height: 668px;
   height: 100vh;
-  padding: 10px 0;
+  padding: 10px;
+}
+
+.decorated-zone::before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--decor-color);
+  border-right: 1px solid var(--decor-color);
+}
+
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  width: 25px;
+  height: 25px;
+  border-bottom: 1px solid var(--decor-color);
+  border-left: 1px solid var(--decor-color);
 }
 
 .header__theme-menu {
   justify-self: end;
-  margin-top: 10px;
 }
 
 .header__theme-menu-list {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 9px;
 }
 
 .header__theme-menu-button {
   background-color: transparent;
   border: none;
-  padding: 2px 14px;
+  border: 1px solid transparent;
+  padding: 2px 14px 4px;
+  appearance: none;
   cursor: pointer;
   color: var(--accent-color);
   text-transform: lowercase;
@@ -134,31 +111,61 @@
   color: var(--title-color);
   text-shadow: 4px 4px 0 var(--accent-color);
   line-height: 0.825;
-  letter-spacing: 0.205em;
-  margin-top: 65px;
-  margin-left: 0;
   font-weight: 700;
 }
 
 .header__text {
-  justify-self: end;
-  max-width: 491px;
-  width: 100%;
   font-weight: 700;
-  background-color: var(--accent-color);
   color: var(--text-accent-color);
-  padding: 0 12px;
-  margin-bottom: 55px;
   line-height: 1.3;
   font-size: 18px;
 }
 
+.card {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.card__title {
+  font-size: 18px;
+  background-color: var(--accent-color);
+  color: var(--text-accent-color);
+  padding: 2px 0;
+  line-height: 1.3;
+  font-weight: 700;
+  min-height: 23px;
+  display: flex;
+  align-items: center;
+}
+
+.card__title--regular {
+  font-weight: 400;
+}
+
+.card__content {
+  padding-top: 10px;
+}
+
+.card__paragraph {
+  color: var(--text-color);
+  line-height: 1.3;
+  margin: 0;
+  font-size: 18px;
+}
+
+.title-decor {
+  background-color: var(--accent-color);
+  color: var(--text-accent-color);
+}
+
+
 .content {
-  padding: 40px 0 20px;
+  padding: 40px 10px;
 }
 
 .content-section {
-  margin-bottom: 40px;
+  margin-bottom: 50px;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -168,26 +175,27 @@
 .content-section__title {
   color: var(--accept-color);
   font-size: 18px;
-  margin-bottom: 15px;
   font-weight: 700;
   line-height: 1.3;
-  word-break: break-word;
 }
 
-.content-section__body {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
-
-.content-section__body--card-column {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 15px;
-}
-
-.content-section--tips {
+.text-card {
   margin-bottom: 20px;
+}
+
+.text-card:last-child {
+  margin: 0;
+}
+
+.text-card__title {
+  margin-bottom: 10px;
+  line-height: 23.4px;
+  font-size: 18px;
+}
+
+.text-card__paragraph {
+  line-height: 23.4px;
+  font-size: 18px;
 }
 
 .tips-header__main {
@@ -195,20 +203,15 @@
   font-size: 18px;
   color: var(--accept-color);
   line-height: 1.3;
-  margin: 0;
 }
 
 .tips-header__subtitle {
   background-color: var(--accent-color);
   color: var(--text-accent-color);
-  padding: 4px 10px;
   font-size: 18px;
-  margin: 0;
   line-height: 1.3;
   font-weight: 700;
-  min-height: 23px;
-  display: flex;
-  align-items: center;
+  margin-bottom: 20px;
 }
 
 .text-card__title--regular {
@@ -243,32 +246,25 @@
 }
 
 .gallery {
-  padding: 0;
-  position: relative;
-  margin-left: 21px;
+  display: grid;
+  gap: 10px;
 }
 
 .gallery__title {
   font-size: 18px;
-  margin-bottom: 20px;
   font-weight: 700;
   line-height: 1.3;
-  min-height: 23px;
-  display: flex;
-  align-items: center;
 }
 
 .gallery__grid {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 8px;
+  gap: 10px;
 }
 
 .gallery__image {
   width: 100%;
-  height: auto;
-  object-fit: cover;
-  display: block;
+  object-position: center;
 }
 
 .footer {
@@ -277,17 +273,15 @@
   place-items: center;
   min-height: 668px;
   height: 100vh;
-  padding: 10px 0;
+  padding: 10px;
 }
 
 .footer__title {
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  letter-spacing: 3px;
   color: var(--title-color);
   text-shadow: 2px 2px 0 var(--accent-color);
   font-weight: 700;
   line-height: 0.825;
-  margin-bottom: 0;
 }
 
 .link {
@@ -309,629 +303,232 @@
   outline: 1px solid var(--text-color);
 }
 
+@media (width >= 768px) {
+  .header {
+    padding: 20px;
+  }
+
+  .header__title {
+    justify-self: start;
+    margin-left: -20px;
+  }
+
+  .content {
+    padding: 60px 20px;
+  }
+  
 .decorated-zone::before {
-  content: "";
-  position: absolute;
-  top: 10px;
-  right: 0;
-  width: 25px;
-  height: 25px;
-  border-top: 1px solid var(--decor-color);
-  border-right: 1px solid var(--decor-color);
+  top: 20px;
+  right: 20px;
 }
 
 .decorated-zone::after {
-  content: "";
-  position: absolute;
-  bottom: 10px;
-  left: 0;
-  width: 25px;
-  height: 25px;
-  border-bottom: 1px solid var(--decor-color);
-  border-left: 1px solid var(--decor-color);
+  bottom: 20px;
+  left: 20px;
 }
 
-@media (max-width: 767px) {
-  .page__container {
-    max-width: 100%;
-  }
-
-  .header {
-    padding: 10px 0;
-  }
-  
-  .header__rec {
-    top: 10px;
-    right: 28px;
-  }
-
-  .header__theme-menu-list {
-    gap: 14px;
-    margin-bottom: 6px;
-  }
-  
-  .header__title {
-    font-size: clamp(6.25rem, 2.0115rem + 0.0178vw, 8.5rem);
-    margin-top: 0;
-    letter-spacing: 0;
-  }
-  
-  .header__text {
-    max-width: 100%;
-    margin-bottom: 0;
-    margin-right: 0;
-    padding: 0;
-  }
-
-  .header__theme-menu {
-    margin-top: 0;
-    margin-right: 0px;
-  }
-  
-  .content {
-    padding: 30px 0 15px;
-  }
-  
-  .content-section {
-    margin-bottom: 42px;
-    gap: 19px;
-  }
-  
-  .content-section__title {
-    margin-bottom: 0;
-    margin-top: 11px;
-  }
-
-  .tips-header {
-    margin-top: 7px;
-    margin-bottom: 9px;
-  }
-
-  .tips-header__subtitle {
-    margin-top: 16px;
-    margin-bottom: 20px;
-    padding: 0;
-    min-height: 23px;
-    display: flex;
-    align-items: center;
-  }
-
-  .card--advice .card__title {
-    padding: 0;
-    min-height: 23px;
-    display: flex;
-    align-items: center;
-  }
-
-  .content-section--tips .card--advice {
-    margin-bottom: 10px;
-  }
-
-  .text-card__paragraph {
-    margin-top: 10px;
-    line-height: 23.4px;
-  }
-
-  .tips-header__main {
-    margin-bottom: 4px;
-  }
-
-  .card {
-    margin-top: 3px;
-  }
-  
-  .content-section__body {
-    gap: 20px;
-  }
-  
-  .card__content {
-    padding-top: 8px;
-  }
-
-  .gallery {
-    margin-left: 0;
-  }
-
-  .gallery__title {
-    margin-bottom: 11px;
-    min-height: 23px;
-    display: flex;
-    align-items: center;
-  }
-
-  .gallery__grid {
-    grid-template-columns: 1fr;
-    gap: 10px;
-  }
-
-  .footer__title {
-    margin-top: 54px;
-    font-size: clamp(6.25rem, 6.0115rem + 0.0178vw, 7.5rem);
-    margin-left: 4px;
-  }
-  
-  .decorated-zone::before {
-    top: 10px;
-    right: 0;
-  }
-  
-  .decorated-zone::after {
-    bottom: 10px;
-    left: 0;
-  }
+.header__rec {
+  top: 20px;
+  right: 48px;
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
-  .page__container {
-    padding: 0;
-  }
-  
-  .header {
-    padding: 20px 0;
-  }
-  
-  .header__rec {
-    top: 20px;
-    right: 49px;
-  }
-  
-  .header__title {
-    font-size: clamp(6.2rem, 2.5625rem + 6.4531vw, 0.8125rem);
-    margin-top: 9px;
-    letter-spacing: 5px;
-  }
-  
-  .header__text {
-    padding: 0;
-    max-width: 364px;
-    margin-bottom: 2px;
-    margin-right: 20px;
-  }
+.header__rec::after {
+  top: 8px;
+  right: -20px;
+}
 
-  .header__theme-menu {
-    margin-right: 22px;
-    margin-top: 0;
-    margin-bottom: 2px;
-  }
+.header__text {
+  width: 50%;
+  justify-self: end;
+}
 
-  .header__theme-menu-list {
-    gap: 15px;
-  }
+.content-section {
   
-  .content {
-    padding: 56px 0 30px;
-  }
-  
-  .content-section {
-    margin-left: 21px;
-    gap: 15px;
-    margin-bottom: 43px;
-  }
+  margin-bottom: 80px;
+}
+
+.content-section__title--why {
+  width: 236px;
+}
+
+.content-section__body {
+  width: 472px;
+}
 
   .content-section--why {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: 10px;
-    align-items: start;
-    margin-bottom: 67px;
-    margin-left: 20px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 80px;
   }
   
   .content-section__title {
-    margin-bottom: 0;
-    padding-top: 5px;
-    width: 211px;
-  }
-
-  .text-card__paragraph {
-    margin-top: 9px;
-  }
-
-  .content-section--factors .content-section__title {
-    margin-top: 10px;
-  }
-  
-  .content-section__body {
-    gap: 25px;
-  }
-
-  .why-title {
-    margin-top: 4px;
-    min-height: 23px;
-    display: flex;
-    align-items: center;
-  }
-  
-  .content-section__body--card-column {
-    grid-template-columns: repeat(1, 1fr);
-    gap: 21px;
-  }
-
-  .tips-header__subtitle {
-    padding: 0 0 0 0;
-    margin-bottom: 20px;
-    width: 472px;
-    min-height: 23px;
-    display: flex;
-    align-items: center;
-  }
-
-  .title-decor {
-    width: 472px;
-    min-height: 23px;
-    display: flex;
-    align-items: center;
+    width: 236px;
   }
 
   .factor-title {
     width: 728px;
-    margin-top: 4px;
-    min-height: 23px;
-    display: flex;
-    align-items: center;
   }
 
-  .card__paragraph {
-    margin-top: 4px;
+  .paragraph--why {
+    width: 728px;
   }
-
-  .card__content {
-    padding-top: 10px;
-  }
-
-  .card--advice {
-    margin-bottom: 30px;
-  }
-
-  .card--advice .card__title {
-    padding: 0;
-    min-height: 23px;
-    display: flex;
-    align-items: center;
-  }
-
-  .card--advice .card__paragraph {
-    margin: 0;
-    padding: 0;
-  }
-
-  .tips-header {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: 11px;
-    margin-bottom: 40px;
-    margin-top: 40px;
-  }
-
+  
   .tips-header__main {
-    margin-top: 0px;
+    width: 236px;
   }
 
-  .content-section--tips .content-section__body--tips {
-    padding-right: 20px;
+   .content-section--tips {
+    display: grid;
+    grid-template-columns: 236px 1fr;
+    gap: 20px;
+    margin-bottom: 78px;
   }
 
-   .content-section--tips .card--advice {
-    padding-right: 90px;
+  .gallery {
+    gap: 19px;
   }
 
   .gallery__grid {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, auto);
     gap: 20px;
-    margin-top: 20px;
-    margin-right: 19px;
   }
 
-   .gallery-title-custom {
-    width: 98%;
-    min-height: 23px;
-    display: flex;
-    align-items: center;
+    .gallery__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
-  .gallery__image:nth-child(1) {
+  .sunset {
     grid-column: 1 / 3;
-    grid-row: 1 / 2;
+    grid-row: 1;
     height: 192px;
   }
   
-  .gallery__image:nth-child(2) {
-    grid-column: 3 / 4;
+  .ice-cream {
+    grid-column: 3;
     grid-row: 1 / 3;
-    height: 441px;
+    height: 442px;
   }
   
-  .gallery__image:nth-child(3) {
-    grid-column: 1 / 2;
+  .cassette {
+    grid-column: 1;
     grid-row: 2 / 4;
     height: 568px;
   }
   
-  .gallery__image:nth-child(4) {
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
+  .books {
+    grid-column: 2;
+    grid-row: 2;
     height: 230px;
   }
   
-  .gallery__image:nth-child(5) {
+  .street {
     grid-column: 2 / 4;
-    grid-row: 3 / 4;
+    grid-row: 3;
     height: 318px;
   }
 
-  .footer__title {
-    font-size: clamp(6.25rem, 6.0115rem + 1.0178vw, 7.5rem);
-    margin-top: 61px;
-  }
-  
-  .decorated-zone::before {
-    top: 20px;
-    right: 20px;
-  }
-  
-  .decorated-zone::after {
-    bottom: 20px;
-    left: 0;
-  }
 }
 
-@media (min-width: 1024px) {
-  .page__container {
-    padding: 0;
-  }
-  
-  .header {
-    padding: 0;
-  }
-  
-  .header__theme-menu {
-    justify-self: center;
-    align-self: start;
-  }
-  
-  .header__theme-menu-list {
-    flex-direction: row;
-    margin-top: 19px;
-    gap: 7px;
-    margin-left: 20px;
-  }
-  
-  .header__rec {
-    top: 20px;
-    right: 48px;
-  }
-  
+@media (width >= 1024px) {
   .header__title {
-    font-size: clamp(7.9rem, 0rem + 15.4531vw, 9.8125rem);
-    margin-top: 3px;
-    letter-spacing: 0;
-  }
-  
-  .header__text {
-    max-width: 490px;
-    margin-bottom: 23px;
-    margin-right: 21px;
-    padding: 0;
-  }
-  
-  .content {
-    padding: 0 0 20px;
-  }
-  
-  .content-section--why {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: 10px;
-    align-items: start;
-    margin-bottom: 44px;
-    margin-top: 55px;
-    margin-left: 13px;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem) ;
   }
 
-  .content-section--why .content-section__title {
-    margin-left: 7px;
+   .header__theme-menu {
+    justify-self: center;
+    align-self: start;
     margin-top: 0px;
   }
 
-  .card__paragraph {
-    margin-top: 4px;
+  .header__theme-menu-list {
+    flex-direction: row;
   }
-  
+
+  .header__text {
+    width: 491px;
+  }
+
   .content-section__title {
-    margin-bottom: 0;
-    width: 284px;
-    margin-left: 0;
+    width: 314px;
   }
 
-  .title-decor {
-    width: 649px;
-    min-height: 23px;
+   .content-section--why {
     display: flex;
-    align-items: center;
-  }
-  
-  .content-section__body {
-    gap: 0px;
-    margin-left: 41px;
-    margin-top: 1px;
-  }
-
-  .text-card__paragraph {
-    margin-top: 10px;
-    width: 673px;
-    margin-bottom: 23px;
-  }
-  
-  .card__content {
-    padding-top: 7px;
-  }
-
-  .text-card {
+    justify-content: space-between;
     width: 100%;
   }
 
-  .content-section--factors {
-    margin-bottom: 0px;
-    margin-left: 21px;
-    gap: 8px;
+  .content-section__title--why {
+    width: 315px;
   }
   
-  .content-section__body--card-column {
-    grid-template-columns: repeat(3, 1fr);
-    gap: 12px;
-    width: 99%;
-    margin-left: 0px;
-    margin-top: 9px;
+  .content-section__body {
+    width: calc(100% - 335px);
   }
 
-  .content-section--tips {
-    margin-bottom: 76px;
+   .content-section--factors {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+   .content-section__body--card-column {
     display: grid;
-    gap: 0;
-    margin-left: 0;
-    margin-top: 0px;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    width: 100%;
+  }
+
+  .card-why {
+    width: 315px;
+  }
+
+  .paragraph--why {
+    width: 315px;
   }
 
   .factor-title {
-    width: 314px;
-    min-height: 23px;
-    display: flex;
-    align-items: center;
+    width: 315px;
   }
 
-  .factor-text {
-   width: 314px;
-  }
-  
-  .content-section--tips .tips-header {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: 1px;
-    margin-bottom: 0px;
-    align-items: start;
-    margin-left: 21px;
-    margin-top: 64px;
-  }
-  
-  .content-section--tips .tips-header__main {
-    margin: 0;
-    margin-top: 0;
-  }
-  
-  .content-section--tips .tips-header__subtitle {
-    margin: 0;
-    padding: 0;
-    margin-bottom: 20px;
-    width: 653px;
-    min-height: 23px;
-    display: flex;
-    align-items: center;
-  }
-  
-  .content-section--tips .content-section__body--tips {
-    display: flex;
-    flex-direction: column;
-    gap: 0px;
-    margin-left: auto;
-    margin-top: 0;
-    margin-bottom: 6px;
-    padding-right: 0px
-  }
-  
-  .content-section--tips .card--advice {
-    margin-bottom: 0;
-    padding-top: 0;
-    margin-top: 0;
-  }
-  
-  .content-section--tips .card--advice .card__title {
-    margin: 0 0 4px 0;
-    padding: 2px 0;
-    min-height: 23px;
-    display: flex;
-    align-items: center;
-  }
-  
-  .content-section--tips .card--advice .card__paragraph {
-    padding: 0;
-    margin: 0 0 12px 0;
-    margin-bottom: 0;
-    margin-top: 4px;
-  }
-  
-  .content-section--tips .card--advice:last-child .card__paragraph {
-    margin-bottom: 0;
-  }
+  .tips-header__main {
+  width: 315px;
+}
 
-  .gallery-title-custom {
-    width: 98%;
-    min-height: 23px;
-    display: flex;
-    align-items: center;
-  }
+.content-section--tips {
+  gap: 99px
+}
 
-  .gallery__grid {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, auto);
-    gap: 20px;
-    width: 98%;
-    margin-top: 17px;
+.content-section__body--tips {
+  width: 649px;
+}
+
+.sunset {
+  width: 650px;
+  height: 260px;
   }
   
-  .gallery__image:nth-child(1) {
-    grid-column: 1 / 3;
-    grid-row: 1 / 2;
-    height: 260px;
-  }
-  
-  .gallery__image:nth-child(2) {
-    grid-column: 3 / 4;
-    grid-row: 1 / 3;
+  .ice-cream {
     height: 595px;
   }
   
-  .gallery__image:nth-child(3) {
-    grid-column: 1 / 2;
-    grid-row: 2 / 4;
+  .cassette {
     height: 768px;
   }
   
-  .gallery__image:nth-child(4) {
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-    height: 230px;
+  .books {
+    height: 315px;
   }
   
-  .gallery__image:nth-child(5) {
-    grid-column: 2 / 4;
-    grid-row: 3 / 4;
-    height: 428px;
+  .street {
+    height: 433px;
   }
-  
+
   .footer__title {
-    font-size: clamp(8.5rem, -0.4375rem + 14.4531vw, 9.8125rem);
-    margin-top: 82px;
-  }
-  
-  .decorated-zone::before {
-    top: 20px;
-    right: 20px;
-  }
-  
-  .decorated-zone::after {
-    bottom: 20px;
-    left: 20px;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
-  .footer-decorated::before {
-    top: 60px;
-    right: 20px;
-  }
-
-  .footer-decorated::after {
-    bottom: 0;
-    left: 20px;
-    top: 763px;
-  }
 }
